# polkaports

./: .gitignore  .gitmodules  Cargo.toml  README.md  activate.sh  build.sh  clean.sh  hello.sh  setup.sh
.github/workflows/: ci.yml
apps/busybox/: build.sh
apps/c++/: Makefile  main.cc
apps/hello-world/: Makefile
apps/quake/: Makefile  README.md  cl_demo.c  client.h  common.c  console.c  d_edge.c  d_local.h  d_parta.s  d_polysa.s  d_rast.s  d_varsa.s  host.c  host_cmd.c  math.s  mathlib.h  menu.c  net.h  net_loop.c  net_main.c  net_vcr.c  net_win.c  pr_cmds.c  pr_edict.c  pr_exec.c  quakedef.h  r_aclipa.s  r_aliasa.s  r_edgea.s  r_rasta.s  r_shared.h  r_surf8.s  r_varsa.s  render.h  snd_dma.c  snd_mem.c  sound.h  sv_progs.h  sys_null.c  vid_corevm.c  (+1 more)
apps/rust/hello/: Cargo.toml  rust-toolchain.toml
ci/: apps.sh  apt.sh  brew.sh  check-b2sum.sh  check-reproducible.sh  check-version.sh  dist.sh  install-via-corevm-dist.sh  rust.sh  setup.sh
crates/corevm-dist/: Cargo.toml  README.md  b2sum.txt  build.rs  env.sh
crates/corevm-dist/src/: archive.rs  command.rs  main.rs
crates/corevm-dist/src/command/: install.rs  update.rs
crates/corevm-linker/: Cargo.toml  build.rs
crates/corevm-linker/src/: lib.rs
crates/corevm-linker/tests/: compile.rs
crates/hello/: Cargo.toml
crates/polkakernel/: Cargo.toml  README.md
crates/polkakernel/src/: debug.rs  env.rs  error.rs  fs.rs  kernel.rs  lib.rs  libc.rs  machine.rs
crates/polkakernel/src/fs/: in_memory.rs  mod.rs  std_io.rs
crates/polkakernel/src/pvm/: machine.rs
libs/musl/: .gitignore  Makefile  config.mak
libs/musl/arch/riscv64/: atomic_arch.h  crt_arch.h  pthread_arch.h  syscall_arch.h
libs/musl/src/env/: __init_tls.c
libs/musl/src/internal/: libc.c
libs/musl/src/ldso/: dl_iterate_phdr.c
libs/musl/src/polkavm/: polkavm.c
libs/musl/src/process/riscv64/: vfork.s
libs/musl/src/setjmp/riscv64/: longjmp.S  setjmp.S
libs/musl/src/signal/riscv64/: restore.s
libs/musl/src/stdio/: fread.c
libs/musl/src/thread/riscv64/: __unmapself.s  clone.s  syscall_cp.s
sdk/: clang++-nostdlib.cfg  clang++.cfg  clang-nostdlib.cfg  clang.cfg  corevm_guest.h  polkavm-c++  polkavm-cc  riscv64emac-corevm-linux-musl.json  riscv64emac-template-linux-musl.json  riscv64emac-unknown-none-polkavm.json
