[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/polkaports.git"
license = "Apache-2.0"
version = "0.1.0"

[workspace]
resolver = "2"
members = [
    "crates/corevm-linker",
    "crates/polkakernel",
]
default-members = ["crates/polkakernel"]
