[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://github.com/paritytech/polkaports"
repository = "https://github.com/paritytech/polkaports"
license = "Apache-2.0"

[workspace]
resolver = "2"
members = [
    "crates/corevm-dist",
    "crates/polkakernel",
]
default-members = [
    "crates/corevm-dist",
    "crates/polkakernel",
]

[profile.release]
debug = false
