[package]
name = "corevm-dist"
description = "CoreVM Linux distribution CLI. Downloads and installs RISCV system root and build tools."
documentation = "https://docs.rs/corevm-dist"
readme = "README.md"
keywords = ["polkavm", "corevm", "linux"]
categories = ["command-line-utilities"]
include = ["**/*.rs", "Cargo.toml", "README.md", "b2sum.txt", "release-url.txt", "env.sh"]
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
version = "0.1.0"
publish = true

[features]
default = []
reqwest = ["dep:reqwest"]

[dependencies]
anyhow = "1.0.102"
blake2b_simd = "1.0.4"
clap = { version = "4.6.0", features = ["derive", "env"] }
fs = { version = "3.3.0", package = "fs-err" }
memmap2 = "0.9.10"
reqwest = { version = "0.13.2", features = ["blocking"], optional = true }
tar = { version = "0.4.45", features = [], default-features = false }
tempfile = "3.27.0"
zstd = "0.13.3"
