[package]
name = "polkakernel"
description = "Linux syscall abstraction layer for PolkaVM/CoreVM"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
std = ["log/std"]

[dependencies]
log = { version = "0.4.27", features = [], default-features = false }
